# Sortie

./: .gitignore  Cargo.toml  README.md  launcher-app-handoff-spec.md
installer/: Install-Sortie.bat  Install-Sortie.ps1  SortieSetup.iss  Uninstall-Sortie.bat  Uninstall-Sortie.ps1
src/: app.rs  lib.rs  main.rs  theme.rs
src/launch/: dispatch.rs  dropped.rs  mod.rs
src/model/: item.rs  mod.rs  project.rs  state.rs
src/ui/: grid.rs  mod.rs  modal.rs  tile.rs  toast.rs
tests/: model_tests.rs
