[package]
name = "sortie"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
open = "5.1"
webbrowser = "1.0"
rfd = "0.14"
runas = "1.2"
directories = "5.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
